--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,7 @@ project:
 
 website:
   page-navigation: true
-  title: "WSSD Parents for Balanced Tech Use"
+  title: "Haven Hold The Phone"
   description: ""
   site-url: "https://havenholdthephone.com"
   
